--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@hexlet/code",
   "version": "1.0.0",
   "description": "[![Actions Status](https://github.com/Romanov55/frontend-project-46/workflows/hexlet-check/badge.svg)](https://github.com/Romanov55/frontend-project-46/actions)",
-  "main": "diff.js",
+  "main": "index.js",
   "type": "module",
   "bin": {
     "gendif": "bin/gendif.js"
@@ -22,6 +22,8 @@
   "homepage": "https://github.com/Romanov55/frontend-project-46#readme",
   "dependencies": {
     "commander": "^9.4.1",
-    "lodash": "^4.17.21"
+    "fs": "^0.0.1-security",
+    "lodash": "^4.17.21",
+    "path": "^0.12.7"
   }
 }
