--- a/package.json
+++ b/package.json
@@ -25,5 +25,11 @@
     "fs": "^0.0.1-security",
     "lodash": "^4.17.21",
     "path": "^0.12.7"
+  },
+  "devDependencies": {
+    "eslint": "^8.27.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.26.0",
+    "jest": "^29.3.1"
   }
 }
