--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "gendif": "bin/gendif.js"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
