--- a/package.json
+++ b/package.json
@@ -4,6 +4,10 @@
   "description": "[![Actions Status](https://github.com/Romanov55/frontend-project-46/workflows/hexlet-check/badge.svg)](https://github.com/Romanov55/frontend-project-46/actions)",
   "main": "index.js",
   "type": "module",
+  "transform": {
+    "\\.[jt]sx?$": "babel-jest",
+    "\\.css$": "some-css-transformer"
+  },
   "bin": {
     "gendif": "bin/gendif.js"
   },
