--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "[![Actions Status](https://github.com/Romanov55/frontend-project-46/workflows/hexlet-check/badge.svg)](https://github.com/Romanov55/frontend-project-46/actions)",
   "main": "index.js",
-  "type": "module",
+  "type": "commonjs",
   "transform": {
     "\\.[jt]sx?$": "babel-jest",
     "\\.css$": "some-css-transformer"
@@ -11,8 +11,9 @@
   "bin": {
     "gendif": "bin/gendif.js"
   },
-  "scripts": {
-    "test": "jest"
+  "script": {
+    "test": "cross-env NODE_OPTIONS=--experimental-vm-modules npx jest",
+    "test:coverage": "cross-env NODE_OPTIONS=--experimental-vm-modules npx jest --coverage"
   },
   "repository": {
     "type": "git",
@@ -31,6 +32,7 @@
     "path": "^0.12.7"
   },
   "devDependencies": {
+    "cross-env": "^7.0.3",
     "eslint": "^8.27.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.26.0",
