--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "[![Actions Status](https://github.com/Romanov55/frontend-project-46/workflows/hexlet-check/badge.svg)](https://github.com/Romanov55/frontend-project-46/actions)",
   "main": "index.js",
-  "type": "commonjs",
+  "type": "module",
   "transform": {
     "\\.[jt]sx?$": "babel-jest",
     "\\.css$": "some-css-transformer"
