--- a/.github/workflows/code.yml
+++ b/.github/workflows/code.yml
@@ -1,26 +1,22 @@
-name: Node.js
+name: hexlet-check
 
-on: push
+on:
+  push:
+    branches:
+      - '**'
+    tags:
+      - '**'
 
 jobs:
   build:
     runs-on: ubuntu-latest
-
     steps:
       - uses: actions/checkout@v2
-      - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v2
-        with:
-          node-version: 18.x
-          cache: 'npm'
-      - name: Make test
-        run: |
-          make install
-          make lint
-      - name: Coverage test
-        uses: paambaati/codeclimate-action@v3.0.0
+
+      - name: Hexlet project check
+        uses: hexlet/project-action@release
+        env:
         env:
           CC_TEST_REPORTER_ID: ${{ secrets.TEST_REPORTER_ID }}
         with:
-         coverageCommand: make test-coverage
-         debug: true
+          coverageCommand: make test-coverage
