--- a/.github/workflows/jest.yml
+++ b/.github/workflows/jest.yml
@@ -5,6 +5,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      - npx eslint
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v3
       - run: make install
