--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "dependencies": {
     "commander": "^9.4.1",
     "fs": "^0.0.1-security",
+    "jest-cli": "^29.3.1",
     "lodash": "^4.17.21",
     "path": "^0.12.7"
   },
