--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "commander": "^9.4.1",
     "fs": "^0.0.1-security",
     "jest-cli": "^29.3.1",
+    "js-yaml": "^4.1.0",
     "lodash": "^4.17.21",
     "path": "^0.12.7"
   },
