--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@hexlet/code",
   "version": "1.0.0",
-  "description": "[![Actions Status](https://github.com/Romanov55/frontend-project-46/workflows/hexlet-check/badge.svg)](https://github.com/Romanov55/frontend-project-46/actions)",
+  "description": "(This utility for evaluating the difference in two files)",
   "main": "index.js",
   "type": "module",
   "transform": {
